# automua

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-ci.txt  requirements-mysql.txt  requirements-test.txt  requirements.txt
.github/workflows/: qa-checks.yml
alembic/: Makefile  env.py
alembic/versions/: f62e64b43d2f_2020_0.py
autoconfiguration/: index.html  raw.html
autoconfiguration/fileformat/: index.html  raw.html
automua/: __init__.py  config.py  database.py  ldap.py  model.py  server.py  util.py
automua/generators/: __init__.py  apple.py  mozilla.py  outlook.py
automua/views/: __init__.py  autoconfig.py  autodiscover.py  initdb.py  mobileconfig.py  site.py
contrib/: apache-sample.conf  automua.service  flask.sh  nginx-sample.conf  package.sh  setupvenv.sh  sqlite-generate.sh  unittest.sh
contrib/OpenRC/: conf_d  init_d
docs/: automua.adoc  config.adoc  dbconfig.adoc  dbupgrade.adoc  index.html  installation.adoc  ldap.adoc  muaconfig.adoc  operation.adoc  running.adoc  webserver.adoc
docs/gh-pages/: index.html
ldap/: Makefile
tests/: base.py  test_apple.py  test_database.py  test_ldap.py  test_mozilla.py  test_outlook.py  test_site.py  test_util.py  unittest.conf
